<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cubic Meter Community</string>
    <string name="action_settings">Settings</string>
    <!-- green "##2f4f4f", light-green "#ccffff" -->
    <!-- white "#ffffff", light-green "#ccffff" -->
    <string name="label_meteorologist">Meteorologist</string>
    <string name="label_soil__scientist">Soil Scientist</string>
    <string name="label_naturalist">Naturalist</string>
    <string name="label_main_menu">Main Menu</string>
    <string name="label_mm1">Collect Data</string>
    <string name="label_mm1_desc">Do Activities and Collect Data</string>
    <string name="label_mm2">Review Data</string>
    <string name="label_mm2_desc">Review Past Activities</string>
    <string name="label_mm3">Create Charts</string>
    <string name="label_mm3_desc">View Data in the form of Charts</string>
    <string name="label_sg1">Select Your Group:</string>
    <string name="label_sg2">Is this a new collection or a past one?</string>
    <string name="label_sr1">Select a Role:</string>
    <string name="label_sa1">Select an Activity:</string>
    <string name="label_back">Back</string>
    <string name="label_next">Next</string>
    <string name="radiobutton_sg1">New Collection</string>
    <string name="radiobutton_sg2">Past Collection</string>

    <string-array name="meteorologistActivities">
        <item>Canopy Cover</item>
        <item>Temperature</item>
        <item>Air Pressure</item>
        <item>Humidity</item>
        <item>Wind</item>
        <item>Precipitation and Average Rainfall</item>
        <item>Clouds</item>
        <item>Additional Comments</item>
    </string-array>
    <string-array name="naturalistActivities">
        <item>Biodiversity</item>
        <item>Additional Comments</item>
    </string-array>
    <string-array name="soilScientistActivities">
        <item>Soil Color</item>
        <item>Soil pH Levels</item>
        <item>Soil Texture</item>
        <item>Soil Consistence</item>
        <item>Soil Moisture</item>
        <item>Soil Odor</item>
        <item>Additional Comments</item>
    </string-array>
    <string-array name="dataTypes">
        <item>Temperature</item>
        <item>Air Pressure</item>
        <item>Humidity</item>
        <item>Wind</item>
        <item>Average Rainfall</item>
        <item>Biodiversity</item>
        <item>Soil pH Levels</item>
        <item>Soil Moisture</item>
    </string-array>
    <string-array name="meteorologistFragments">
        <item>canopy_cover_activity</item>
        <item>temperature_activity</item>
        <item>airpressure_activity</item>
        <item>humidity_activity</item>
        <item>wind_activity</item>
        <item>rainfall_activity</item>
        <item>cloudactivity</item>
        <item>comments_meteorologist</item>
    </string-array>
    <string-array name="naturalistFragments">
        <item>biodiversity_activity</item>
        <item>comments_naturalist</item>
    </string-array>
    <string-array name="soilScientistFragments">
        <item>soil_color_activity</item>
        <item>soil_ph_activity</item>
        <item>soil_texture</item>
        <item>soil_consistency</item>
        <item>soil_moisture</item>
        <item>soil_odor</item>
        <item>comments_soil_scientist</item>
    </string-array>
    <string-array name="BugNames">
        <item>Snails</item>
        <item>Bristletails</item>
        <item>Lacewings</item>
        <item>Mayflies</item>
        <item>Thrips</item>
        <item>Pill Bugs</item>
        <item>Adult Beetles</item>
        <item>Spiders</item>
        <item>Butterflies/Moths</item>
        <item>Grasshoppers</item>
        <item>Earthworms</item>
        <item>Springtails</item>
        <item>Beetle Larvae</item>
        <item>Woodroaches</item>
        <item>Cadisflies</item>
        <item>Pseudoscorpions</item>
        <item>Mites &amp; Ticks</item>
        <item>Earwigs</item>
        <item>Stoneflies</item>
        <item>Caterpillars</item>
        <item>Centipedes &amp; Millipedes</item>
        <item>Aphids/Cicadas</item>
        <item>Booklice/Barklice</item>
        <item>Fly &amp; Gnat Larvae</item>
        <item>Bees &amp; Wasps</item>
        <item>Ants</item>
    </string-array>
    <string-array name="BugPics">
        <item>snail2</item>
 <!-- snails -->
        <item>bristletail2</item>
 <!-- bristletails -->
        <item>lacewing</item>
 <!-- lacewings -->
        <item>mayfly</item>
 <!-- mayflies -->
        <item>thrip</item>
 <!-- thrips -->
        <item>pillbug </item>
 <!-- pillbugs -->
        <item>beetle</item>
        <item>spider</item>
 <!-- spiders -->
        <item>butterfly</item>
        <item>grasshopper</item>
        <item>worm</item>
        <item>springtail</item>
 <!-- springtails -->
        <item>larvae</item>
 <!-- beetle larvae -->
        <item>woodroach</item>
 <!-- woodroaches -->
        <item>caddis</item>
 <!-- cadisflies -->
        <item>pseudoscorpion</item>
 <!-- pseudoscorpions -->
        <item>tick</item>
 <!-- mites and ticks -->
        <item>earwig</item>
 <!-- earwigs -->
        <item>stonefly</item>
 <!-- stoneflies -->
        <item>caterpillar</item>
        <item>centipede</item>
 <!-- centipedes and millipedes -->
        <item>aphid</item>
 <!-- aphids/cicadas -->
        <item>lice</item>
 <!-- Booklice/Barklice -->
        <item>fly</item>
 <!-- Flies &amp; Gnat Larvae -->
        <item>wasp</item>
 <!-- bees + wasps -->
        <item>ant</item>
 <!-- ants -->

    </string-array>

    <string name="label_ng2">Firstname Lastname</string>
    <string name="soil_color_title">Select the color of your soil below:</string>
    <string name="backbuttonsoilcolor">&lt; Back to Activities</string>
    <string name="recordRainfall">submit</string>
    <string name="rainfallInstructions">Enter the rainfall amount in your rain gauge</string>
    <string name="antLabel">Ants</string>
    <string name="caterLabel">Caterpillars</string>
    <string name="ghopLabel">Grasshoppers</string>
    <string name="DragonflyLabel">Dragonflies</string>
    <string name="FlyLabel">Flies</string>
    <string name="WaspLabel">Wasps</string>
    <string name="AntLabel">Ants</string>
    <string name="earwigLabel">Earwigs</string>
    <string name="BeetleLabel">Beetles</string>
    <string name="Wormlabel">Worms</string>
    <string name="numOrganisms">total number of organisms:</string>
    <string name="typeCount">total organism types:</string>
    <string name="biodiversityFinishButton">Finish</string>
    <string name="bioInstructions">Count the number of each organism</string>
    <string name="stratusLabel">Stratus</string>
    <string name="cirrusLabel">Cirrus</string>
    <string name="tempInstructions">Enter the temperature from your thermometer</string>
    <string name="farenheightLabel">Fahrenheit:</string>
    <string name="label_cc1">Select Group:</string>
    <string name="label_cc2">Select Chart Type:</string>
    <string name="celsiusLabel">Celsius:</string>
    <string name="finishTempActivity">Finish</string>
    <string name="airpressureinstructions">"Record the barometric pressure from the weather station "</string>
    <string name="hglabel">Hg</string>
    <string name="finishairpressurebutton">finish</string>
    <string name="windinstructions">Hold your wind meter away from your body, and then record the result from the meter:</string>
    <string name="mphresult">mph</string>
    <string name="finishwindactivity">Finish</string>
    <string name="wetbulbtemp">Wet bulb temperature</string>
    <string name="drybulbtemp">Dry bulb temperature</string>
    <string name="wetdrydifference">Wet Bulb temp - Dry bulb temp =</string>
    <string name="finishhumidity">Finish</string>
    <string name="cloudInstruction">Observe the clouds in the sky, and select which type you see</string>
    <string name="cumulonimbuslabel">Cumulonimbus</string>
    <string name="cumuluslabel">Cumulus</string>
    <string name="cloudsfinish">Done</string>
    <string name="label_generate">Generate</string>
    <string name="label_ng3">Enter your Group Name:</string>
    <string name="label_ng4">Group Name</string>
    <string name="label_ng5">Enter the people in your group:</string>
    <string name="label_es1">Select the previous collection time:</string>
    <string name="comments">Enter any additional thoughts you have, or things you couldn\'t list:</string>
    <string name="textview_soilPHInstructions">Insert your soil pH device into the ground and wait 60 seconds. When the number appears, record it below:</string>
    <string name="textview_soilType">Is your soil alkaline, neutral, or acidic?</string>
    <string name="radiobutton_alkaline">Alkaline</string>
    <string name="radiobutton_acidic">Acidic</string>
    <string name="radiobutton_neutral">Neutral</string>
    <string name="act_finishSoilpH">Finish</string>
    <string name="textview_soilconsistency_instructions">Select the option below that best describes the consistency of your soil:</string>
    <string name="radioButton_sand">Sand</string>
    <string name="textview_sandDescription">&#009;Particles are visible to the naked eye</string>
    <string name="radioButton_Silt2">Silt</string>
    <string name="textview_siltDescription">"Particles become dusty when dry and are easily brushed off hands and boots. "</string>
    <string name="radioButton_clay">Clay</string>
    <string name="textview_clayDescription">"Particles are greasy and sticky when wet and hard when dry, and have to be scraped or washed off hands and boots. "</string>
    <string name="act_finishSoilConsistency">Finish</string>
    <string name="title_activity_review__details">Review_DetailsActivity</string>
    <string name="textview_soiltextureinstructions">Describe the texture of your soil in the textbox below</string>
    <string name="act_finishsoiltexture">Finish</string>
    <string name="edittext_soiltextureanswer"></string>
    <string name="textview_soilmoistureinstructions">Insert your soil moisture device into the ground and record the result below:</string>
    <string name="edittext_soilmoistureanswer"></string>
    <string name="act_finishsoilmoisture">Finish</string>
    <string name="title_activity_pie_chart">PieChartActivity</string>
    <string name="textview_soilOdorInstructions">Describe the odor of the soil in the text box below:</string>
    <string name="act_finishSoilOdor">Finish</string>
    <string name="edittext_soilOdortextbox"></string>
    <string name="textview_canopycover">How much of the sky you can see from your CMC station?</string>
    <string name="radiobutton_mostOfIt">most of it</string>
    <string name="radioButton_veryLittle">very little</string>
    <string name="radioButton_noneOfIt">None at all</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="act_finishCanopyCover">Finish</string>
    <string name="title_activity_review_2">Review_2Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="textView_cloudInstructions">"Which of these clouds are in the sky? "</string>
    <string name="textview_windInstructions">Enter the number from your wind meter:</string>
    <string name="textview_soilmoistureinstructions2">Enter the number from your soil moisture device:</string>
    <string name="textview_airpressureinstructions">Enter the barometric pressure below:</string>
    <string name="textview_soilphinstructions">Enter the number from your pH device below:</string>
    <string name="textview_soilconsistencyinstructions">What does your soil look like?</string>
    <string name="textlabel_soilpH_hint">HINT: above 7 is alkaline, 7 is neutral, below 7 is acidic.</string>

</resources>
