<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <Button
        android:id="@+id/sr_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/label_main_menu" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:src="@drawable/cmc_label_small" />

    <TextView
        android:id="@+id/biodiversitylabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/label_sr1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/sr_soil_scientist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sr_main_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/label_soil__scientist" />

    <Button
        android:id="@+id/sr_naturalist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sr_soil_scientist"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/label_naturalist" />

    <Button
        android:id="@+id/sr_meteorologist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sr_naturalist"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/label_meteorologist" />

</RelativeLayout>