<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/soilmoisturebackground" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_soil_moisture"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="44dp"
        android:text="@string/textview_soilmoistureinstructions2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/act_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="44dp"
        android:text="@string/act_finishsoilmoisture" />

    <EditText
        android:id="@+id/text_soil_moisture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/act_finish"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/edittext_soilmoistureanswer" >

        <requestFocus />
    </EditText>

</RelativeLayout>