<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/soilodorbackground" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/textview_soilOdorInstructions"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/text_soil_odor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/edittext_soilOdortextbox" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/act_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/text_soil_odor"
        android:layout_below="@+id/text_soil_odor"
        android:layout_marginRight="43dp"
        android:layout_marginTop="90dp"
        android:text="@string/act_finishSoilOdor" />

</RelativeLayout>