<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/soiltexturebackground" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="@string/textview_soiltextureinstructions"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/text_soil_texture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/edittext_soiltextureanswer" />

    <Button
        android:id="@+id/act_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_soil_texture"
        android:layout_marginRight="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/act_finishsoiltexture" />

</RelativeLayout>